fix: index.css 파일에 scrollbar-hide 클래스 추가

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,14 @@ body {
   margin: 0 auto;
   font-family: "Noto Sans", "Noto Sans KR", sans-serif;
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
